--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "less-loader": "^8.0.0",
     "lint-staged": "^11.1.2",
     "prettier": "^2.4.1",
+    "svg-sprite-loader": "^6.0.11",
     "typescript": "~4.5.5"
   },
   "gitHooks": {
