--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "stylelint": "stylelint --fix  **/*.{css,less,scss,vue}"
   },
   "dependencies": {
     "axios": "^1.2.2",
@@ -31,6 +32,10 @@
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "lint-staged": "^13.1.0",
+    "postcss-less": "^6.0.0",
+    "stylelint": "^15.2.0",
+    "stylelint-config-standard": "^30.0.1",
+    "stylelint-config-standard-vue": "^1.0.0",
     "svg-sprite-loader": "^6.0.11",
     "typescript": "~4.5.5"
   },
