--- a/package.json
+++ b/package.json
@@ -9,35 +9,35 @@
     "stylelint": "stylelint --fix  **/*.{css,less,scss,vue}"
   },
   "dependencies": {
-    "axios": "^1.2.2",
-    "vue": "^3.2.45",
-    "vue-router": "^4.1.6",
+    "axios": "^1.4.0",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.2",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "@typescript-eslint/parser": "^5.48.0",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
     "@vue/cli-plugin-eslint": "~5.0.8",
     "@vue/cli-plugin-router": "~5.0.8",
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-plugin-vuex": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
     "@vue/eslint-config-standard": "^8.0.1",
-    "@vue/eslint-config-typescript": "^11.0.2",
-    "eslint": "^8.0.1",
-    "eslint-plugin-import": "^2.26.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "eslint": "^8.43.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-vue": "^9.8.0",
+    "eslint-plugin-vue": "^9.15.1",
     "less": "^4.1.3",
-    "less-loader": "^11.1.0",
-    "lint-staged": "^13.1.0",
+    "less-loader": "^11.1.3",
+    "lint-staged": "^13.2.2",
     "postcss-less": "^6.0.0",
-    "stylelint": "^15.2.0",
-    "stylelint-config-standard": "^30.0.1",
+    "stylelint": "^15.9.0",
+    "stylelint-config-standard": "^33.0.0",
     "stylelint-config-standard-vue": "^1.0.0",
     "svg-sprite-loader": "^6.0.11",
-    "typescript": "~4.5.5"
+    "typescript": "^4.9.5"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
